# rust_gaeme

./: Cargo.toml
src/: character.rs  event_handler.rs  f_point.rs  main.rs  r_drop.rs  rain_maker.rs  vector_point.rs
src/backgrounds/: mod.rs
src/backgrounds/rain_maker/: mod.rs  r_drop.rs
src/game/: mod.rs
src/game/character/: gravity_affected.rs  mod.rs
src/pillar/: up_pillar.rs
