[package]
name = "gaeme"
version = "0.1.0"
authors = ["gorilskij <43991400@users.noreply.github.com>", "Vagab <bilyksergeaa@gmail.com>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ggez = "0.5.1"
rand = "0.7.2"
